fix z-index

--- a/themes/scss/map/overlays.scss
+++ b/themes/scss/map/overlays.scss
@@ -182,7 +182,7 @@ $buttonColor: #636D72;
   left: 50%;
   width: auto;
   height: auto;
-  z-index: 10;
+  z-index: 12;
 }
 
 /* Legends */
